Change URLs to URIs
Change all URLs to URIs which are relavant for the database since IPs can be used as a database URI. An IP is not a valid URL.